--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/activity_register.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/activity_register.xml
@@ -64,5 +64,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
