--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_auction_preview.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_auction_preview.xml
@@ -16,10 +16,17 @@
         />
 
     <TextView
-        android:id="@+id/body"
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        tools:text="post body"
+        tools:text="description"
+        />
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        tools:text="Status "
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
