--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_my_profile.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_my_profile.xml
@@ -2,18 +2,27 @@
 <androidx.appcompat.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="40dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="40dp"
-    tools:context=".presentation.MainActivity2"
     >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:text="MY PROFILE"
+        android:textSize="28sp" />
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:editable="true"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         tools:ignore="Autofill"
@@ -37,12 +46,6 @@
         tools:ignore="Autofill"
         />
 
-    <com.lot.mobiledemo.presentation.widgets.PasswordInput
-        android:id="@+id/password_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
@@ -54,17 +57,24 @@
         />
 
     <Button
-        android:id="@+id/register_button"
+        android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Update"
         />
 
-    <Button
-        android:id="@+id/login_link"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:text="SETTINGS"
+        android:textSize="22sp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/settings_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
