--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_my_profile.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/layout/fragment_my_profile.xml
@@ -63,6 +63,14 @@
         android:text="Update"
         />
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
