--- a/Backend/src/main/resources/templates/forgotPasswordTemplate.html
+++ b/Backend/src/main/resources/templates/forgotPasswordTemplate.html
@@ -1800,8 +1800,8 @@
                                   <tr>
                                     <td>
                                       <center data-parsed="">
-                                        <a href="${link}" align="center" class="float-center">Reset
-                                          Password</a>
+                                        <a th:href="${link}" align="center" class="float-center">Reset
+                                          Password </a>
                                       </center>
                                     </td>
                                   </tr>
