Fixed some statistic bugs and implement withdraw money possibility

--- a/Backend/src/main/resources/templates/emailConfirmationTemplate.html
+++ b/Backend/src/main/resources/templates/emailConfirmationTemplate.html
@@ -1,281 +1,28 @@
-<!--<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"-->
-<!--        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">-->
-<!--<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">-->
-<!--<head>-->
-<!--  <title>Email</title>-->
-<!--  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>-->
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-<!--  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>-->
-<!--  &lt;!&ndash; use the font &ndash;&gt;-->
-<!--  <style>-->
-<!--      body {-->
-<!--          font-family: 'Roboto', sans-serif;-->
-<!--          font-size: 48px;-->
-<!--      }-->
-
-<!--  </style>-->
-<!--</head>-->
-<!--<body>-->
-<!--<p>Dear <em th:text="${userName}"/>,</p>-->
-<!--<p> Please click the link below to verify your registration: <em th:text="${link}"/></p>-->
-
-<!--<p>-->
-<!--  Regards, <br/>-->
-<!--  <em th:text="${sign}"></em>-->
-<!--</p>-->
-<!--<p><img src="#" alt=""></p>-->
-<!--</body>-->
-<!--</html>-->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta name="x-apple-disable-message-reformatting">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta content="telephone=no" name="format-detection">
-  <title></title>
-  <!--[if (mso 16)]>
-  <style type="text/css">
-    a {text-decoration: none;}
+  <title>Email</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
+  <!-- use the font -->
+  <style>
+      body {
+          font-family: 'Roboto', sans-serif;
+          font-size: 48px;
+      }
+
   </style>
-  <![endif]-->
-  <!--[if gte mso 9]><style>sup { font-size: 100% !important; }</style><![endif]-->
-  <!--[if gte mso 9]>
-  <xml>
-    <o:OfficeDocumentSettings>
-      <o:AllowPNG></o:AllowPNG>
-      <o:PixelsPerInch>96</o:PixelsPerInch>
-    </o:OfficeDocumentSettings>
-  </xml>
-  <![endif]-->
 </head>
-
 <body>
-<div class="es-wrapper-color">
-  <!--[if gte mso 9]>
-  <v:background xmlns:v="urn:schemas-microsoft-com:vml" fill="t">
-    <v:fill type="tile" color="#ffffff"></v:fill>
-  </v:background>
-  <![endif]-->
-  <table class="es-wrapper" width="100%" cellspacing="0" cellpadding="0">
-    <tbody>
-    <tr>
-      <td class="esd-email-paddings" valign="top">
-        <table class="es-header esd-header-popover" align="center" cellspacing="0" cellpadding="0">
-          <tbody>
-          <tr>
-            <td class="es-adaptive esd-stripe" esd-custom-block-id="8429" align="center">
-              <table class="es-header-body" align="center" width="600" cellspacing="0" cellpadding="0">
-                <tbody>
-                <tr>
-                  <td class="esd-structure es-p25t es-p10b es-p20r es-p20l" align="left">
-                    <!--[if mso]><table width="560" cellpadding="0"
-                                        cellspacing="0"><tr><td width="205" valign="top"><![endif]-->
-                    <table class="es-left" align="left" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="es-m-p0r es-m-p20b esd-container-frame" align="center" width="205" valign="top">
-                          <table width="100%" cellspacing="0" cellpadding="0">
-                            <tbody>
-                            <tr>
-                              <td align="center" class="esd-block-image" style="font-size: 0px;"><a target="_blank"><img class="adapt-img" src="https://kzasbb.stripocdn.email/content/guids/87b791be-021c-4376-8f85-cf1716164c4c/images/isd_logo500x500.png" alt style="display: block;" height="100"></a></td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                    <!--[if mso]></td><td width="10"></td><td width="345" valign="top"><![endif]-->
-                    <table align="right" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="esd-container-frame" align="left" width="345">
-                          <table width="100%" cellspacing="0" cellpadding="0" background="https://kzasbb.stripocdn.email/content/guids/87b791be-021c-4376-8f85-cf1716164c4c/images/ibeauty_logo.png" style="background-image: url(https://kzasbb.stripocdn.email/content/guids/87b791be-021c-4376-8f85-cf1716164c4c/images/ibeauty_logo.png); background-repeat: no-repeat; background-position: left top;">
-                            <tbody>
-                            <tr>
-                              <td align="center" class="esd-block-image" style="font-size: 0px;"><a target="_blank"><img class="adapt-img" src="https://kzasbb.stripocdn.email/content/guids/87b791be-021c-4376-8f85-cf1716164c4c/images/capture.PNG" alt style="display: block;" width="345"></a></td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-        <table class="es-content" align="center" cellspacing="0" cellpadding="0">
-          <tbody>
-          <tr>
-            <td class="esd-stripe" align="center">
-              <table class="es-content-body" align="center" width="600" cellspacing="0" cellpadding="0" bgcolor="#ffffff">
-                <tbody>
-                <tr>
-                  <td class="esd-structure es-p20t" esd-custom-block-id="8430" align="left">
-                    <table width="100%" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="esd-container-frame" align="center" width="600" valign="top">
-                          <table width="100%" cellspacing="0" cellpadding="0">
-                            <tbody>
-                            <tr>
-                              <td class="esd-block-image es-p20r es-p20l" align="center" style="font-size: 0px;"><a target="_blank"><img class="adapt-img" src="https://kzasbb.stripocdn.email/content/guids/87b791be-021c-4376-8f85-cf1716164c4c/images/ibeauty_logo.png" alt="Image" style="display: block;" title="Image" width="260"></a></td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-        <table class="es-content" align="center" cellspacing="0" cellpadding="0">
-          <tbody>
-          <tr>
-            <td class="esd-stripe" align="center">
-              <table class="es-content-body" style="border-left:1px solid transparent;border-right:1px solid transparent;border-top:1px solid transparent;border-bottom:1px solid transparent;" align="center" width="600" cellspacing="0" cellpadding="0" bgcolor="#ffffff">
-                <tbody>
-                <tr>
-                  <td class="esd-structure es-p20t es-p40b es-p40r es-p40l" esd-custom-block-id="8537" align="left">
-                    <table width="100%" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="esd-container-frame" align="left" width="518">
-                          <table width="100%" cellspacing="0" cellpadding="0">
-                            <tbody>
-                            <tr>
-                              <td class="esd-block-text es-m-txt-c" align="center">
-                                <h2>Hey there!</h2>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td class="esd-block-text es-m-txt-c es-p15t" align="center">
-                                <p>We received a request to register an account on IBeauty. If this is correct, please confirm by clicking the button below. If you don’t know why you got this email, please ignore it.</p>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td class="esd-block-button es-p20t es-p15b es-p10r es-p10l" align="center"><span class="es-button-border" style="background: #7a00da;"><a th:href="${link}" class="es-button" target="_blank" style="background: #7a00da; border-color: #7a00da;">Confirm Email</a></span></td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-        <table cellpadding="0" cellspacing="0" class="es-footer" align="center">
-          <tbody>
-          <tr>
-            <td class="esd-stripe" esd-custom-block-id="8442" style="background-color: #f7f7f7;" bgcolor="#f7f7f7" align="center">
-              <table class="es-footer-body" width="600" cellspacing="0" cellpadding="0" align="center">
-                <tbody>
-                <tr>
-                  <td class="esd-structure es-p20t es-p20b es-p20r es-p20l" esd-general-paddings-checked="false" align="left">
-                    <table width="100%" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="esd-container-frame" width="560" valign="top" align="center">
-                          <table width="100%" cellspacing="0" cellpadding="0">
-                            <tbody>
-                            <tr>
-                              <td class="esd-block-text es-p5b" align="center">
-                                <h3 style="line-height: 150%;">Let's get social</h3>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td class="esd-block-social es-p10t es-p10b" align="center" style="font-size:0">
-                                <table class="es-table-not-adapt es-social" cellspacing="0" cellpadding="0">
-                                  <tbody>
-                                  <tr>
-                                    <td class="es-p20r" valign="top" align="center"><a href="https://viewstripo.email/"><img title="Facebook" src="https://kzasbb.stripocdn.email/content/assets/img/social-icons/logo-black/facebook-logo-black.png" alt="Fb" width="32" height="32"></a></td>
-                                    <td class="es-p20r" valign="top" align="center"><a href="https://viewstripo.email/"><img title="Youtube" src="https://kzasbb.stripocdn.email/content/assets/img/social-icons/logo-black/youtube-logo-black.png" alt="Yt" width="32" height="32"></a></td>
-                                    <td class="es-p20r" valign="top" align="center"><a href="https://viewstripo.email/"><img title="Pinterest" src="https://kzasbb.stripocdn.email/content/assets/img/social-icons/logo-black/pinterest-logo-black.png" alt="P" width="32" height="32"></a></td>
-                                    <td class="es-p20r" valign="top" align="center"><a href="https://viewstripo.email/" target="_blank"><img title="Instagram" src="https://kzasbb.stripocdn.email/content/assets/img/social-icons/logo-black/instagram-logo-black.png" alt="Ig" width="32" height="32"></a></td>
-                                    <td valign="top" align="center"><a href="https://viewstripo.email/" target="_blank"><img title="Twitter" src="https://kzasbb.stripocdn.email/content/assets/img/social-icons/logo-black/twitter-logo-black.png" alt="Tw" width="32" height="32"></a></td>
-                                  </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td align="center" class="esd-block-text es-p10t es-p10b">
-                                <p style="line-height: 150%;">You are receiving this email because you have visited our site or asked us about the regular newsletter. You can&nbsp;<a target="_blank" class="unsubscribe" style="line-height: 150%;">unsubscribe here</a>&nbsp;or&nbsp;<a target="_blank" style="line-height: 150%;" href="https://viewstripo.email">update your subscription preferences</a>.</p>
-                              </td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-        <table class="esd-footer-popover es-content" align="center" cellspacing="0" cellpadding="0">
-          <tbody>
-          <tr>
-            <td class="esd-stripe" align="center">
-              <table class="es-content-body" style="background-color: transparent;" align="center" width="600" cellspacing="0" cellpadding="0">
-                <tbody>
-                <tr>
-                  <td class="esd-structure es-p30t es-p30b es-p20r es-p20l" align="left">
-                    <table width="100%" cellspacing="0" cellpadding="0">
-                      <tbody>
-                      <tr>
-                        <td class="esd-container-frame" align="center" width="560" valign="top">
-                          <table width="100%" cellspacing="0" cellpadding="0">
-                            <tbody>
-                            <tr>
-                              <td align="center" class="esd-empty-container" style="display: none;"></td>
-                            </tr>
-                            </tbody>
-                          </table>
-                        </td>
-                      </tr>
-                      </tbody>
-                    </table>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-<div style="position: absolute; left: -9999px; top: -9999px; margin: 0px;"></div>
-</body>
+<p>Dear <em th:text="${userName}"/>,</p>
+<p> Please click the link below to verify your registration: <em th:text="${link}"/></p>
 
+<p>
+  Regards, <br/>
+  <em th:text="${sign}"></em>
+</p>
+<p><img src="#" alt=""></p>
+</body>
 </html>
